--- a/docs/styleguide/css/inc/_vars.less
+++ b/docs/styleguide/css/inc/_vars.less
@@ -10,6 +10,6 @@
 @monospace: "Menlo", "Courier New", monospace;
 
 // Responsive Breakpoints
-@deviceLarge: 1200;
-@deviceMedium: 992;
-@deviceSmall: 768;
+@screenLarge: 1200;
+@screenMedium: 992;
+@screenSmall: 768;
