--- a/docs/styleguide/css/inc/_vars.less
+++ b/docs/styleguide/css/inc/_vars.less
@@ -1,7 +1,8 @@
 // Colors
 @gray:  #676767;
+@light-gray: #dddddd;
 @black: #111111;
-@white: #eeeeee;
+@white: #f5f5f5;
 @blue:  #66a9dc;
 @red:   #ff4444;
 
