--- a/docs/styleguide/css/main.less
+++ b/docs/styleguide/css/main.less
@@ -71,11 +71,7 @@ code {
   display: block;
   overflow: scroll;
   .rem(border-radius, 5);
-  @padding: 16;
-  .rem(padding-top, @padding);
-  .rem(padding-right, @padding);
-  .rem(padding-bottom, @padding);
-  .rem(padding-left, @padding);
+  .rem(padding, 16);
 }
 
 blockquote {
@@ -98,7 +94,6 @@ form {
 .form-group {
   .col();
   position: relative;
-  .rem(padding-bottom, 0);
   .rem(padding-top, 30);
 }
 
@@ -108,7 +103,7 @@ label {
   position: absolute;
   .rem(top, 6);
   .rem(left, 16);
-  color: @blue;
+  color: @gray;
   font-weight: 600;
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
@@ -117,11 +112,11 @@ label {
 
 .js-hide-label label {
   opacity: 0;
-  .rem(top, 20);
+  .rem(top, 10);
 }
 
-.js-unhighlight-label label {
-  color: @gray;
+.js-highlight-label label {
+  color: @blue;
 }
 
 .form-control {
@@ -130,10 +125,7 @@ label {
   border: 0;
   background: white;
   width: 100%;
-  .rem(padding-top, 5);
-  .rem(padding-right, 5);
-  .rem(padding-bottom, 5);
-  .rem(padding-left, 5);
+  .rem(padding, 5);
   box-shadow: inset 0 0 3px 0 @gray;
   .rem(border-radius, 5);
 }
