fixed a firefox javascript issue

--- a/docs/styleguide/css/main.less
+++ b/docs/styleguide/css/main.less
@@ -87,6 +87,8 @@ ul, ol {
   .rem(padding-left, 20);
 }
 
+// Forms
+// =====
 form {
   .row();
 }
@@ -132,8 +134,8 @@ label {
 textarea {
   max-width: 100%;
   min-width: 100%;
+  font-family: @sansSerif;
+  font-weight: 400;
 }
-
-
 
 
