--- a/docs/styleguide/css/inc/_mixins.less
+++ b/docs/styleguide/css/inc/_mixins.less
@@ -23,6 +23,19 @@
     padding: @toppx @rightpx @bottompx @leftpx;
     padding: @toprem @rightrem @bottomrem @leftrem;
   }
+
+  .rem-margin(@top; @right; @bottom; @left) {
+    @toppx: unit(@top, px);
+    @rightpx: unit(@right, px);
+    @bottompx: unit(@bottom, px);
+    @leftpx: unit(@left, px);
+    @toprem: unit(@top / @basePxValue, rem);
+    @rightrem: unit(@right / @basePxValue, rem);
+    @bottomrem: unit(@bottom / @basePxValue, rem);
+    @leftrem: unit(@left / @basePxValue, rem);
+    margin: @toppx @rightpx @bottompx @leftpx;
+    margin: @toprem @rightrem @bottomrem @leftrem;
+  }
 }
 
 .clearfix() {
