--- a/docs/styleguide/css/main.css
+++ b/docs/styleguide/css/main.css
@@ -1,251 +1,1 @@
-html,
-body {
-  font-size: 16px;
-}
-/**
- * ksmithut.github.com style guide
- */
-@-ms-viewport {
-  width: device-width;
-}
-@viewport {
-  width: device-width;
-}
-html,
-body {
-  margin: 0;
-  padding: 0;
-  color: #111111;
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
-  background-color: #f5f5f5;
-}
-* {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-.container {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-left: 0.9375rem;
-  padding-right: 15px;
-  padding-right: 0.9375rem;
-}
-@media (min-width: 768px) {
-  .container {
-    width: 738px;
-    width: 46.125rem;
-  }
-}
-@media (min-width: 992px) {
-  .container {
-    width: 962px;
-    width: 60.125rem;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-    width: 73.125rem;
-  }
-}
-.row {
-  margin-left: -15px;
-  margin-left: -0.9375rem;
-  margin-right: -15px;
-  margin-right: -0.9375rem;
-}
-.row::after,
-.row::before {
-  display: table;
-  content: ' ';
-}
-.row::after {
-  clear: both;
-}
-.main-content {
-  float: left;
-  width: 100%;
-  padding-left: 15px;
-  padding-left: 0.9375rem;
-  padding-right: 15px;
-  padding-right: 0.9375rem;
-}
-@media (min-width: 992px) {
-  .main-content {
-    width: 75%;
-  }
-}
-.sidebar {
-  float: left;
-  width: 100%;
-  padding-left: 15px;
-  padding-left: 0.9375rem;
-  padding-right: 15px;
-  padding-right: 0.9375rem;
-}
-@media (min-width: 992px) {
-  .sidebar {
-    width: 25%;
-  }
-}
-h1 {
-  font-size: 32px;
-  font-size: 2rem;
-}
-h2 {
-  font-size: 24px;
-  font-size: 1.5rem;
-}
-h3 {
-  font-size: 18px;
-  font-size: 1.125rem;
-}
-h4 {
-  font-size: 16px;
-  font-size: 1rem;
-}
-h5 {
-  font-size: 13px;
-  font-size: 0.8125rem;
-}
-h6 {
-  font-size: 10px;
-  font-size: 0.625rem;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 600;
-}
-p,
-label,
-input,
-textarea,
-select,
-ul,
-ol {
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 26px;
-  line-height: 1.625rem;
-  font-weight: 200;
-}
-strong {
-  font-weight: 600;
-}
-a {
-  color: #66a9dc;
-  text-decoration: none;
-  -webkit-transition: all 0.2s ease-in-out;
-          transition: all 0.2s ease-in-out;
-}
-a:hover {
-  color: #2e85c8;
-}
-code {
-  background: #111111;
-  color: #f5f5f5;
-  font-family: "Menlo", "Courier New", monospace;
-  display: block;
-  overflow: scroll;
-  border-radius: 5px;
-  border-radius: 0.3125rem;
-  padding: 16px;
-  padding: 1rem;
-}
-blockquote {
-  color: #676767;
-  border-left-color: #66a9dc;
-  border-left-style: solid;
-  border-left-width: 8px;
-  border-left-width: 0.5rem;
-  margin-left: 0;
-  padding-left: 16px;
-  padding-left: 1rem;
-}
-ul,
-ol {
-  padding-left: 20px;
-  padding-left: 1.25rem;
-}
-form {
-  margin-left: -15px;
-  margin-left: -0.9375rem;
-  margin-right: -15px;
-  margin-right: -0.9375rem;
-}
-form::after,
-form::before {
-  display: table;
-  content: ' ';
-}
-form::after {
-  clear: both;
-}
-form::after,
-form::before {
-  display: table;
-  content: ' ';
-}
-form::after {
-  clear: both;
-}
-.form-group {
-  float: left;
-  width: 100%;
-  padding-left: 15px;
-  padding-left: 0.9375rem;
-  padding-right: 15px;
-  padding-right: 0.9375rem;
-  position: relative;
-  padding-top: 30px;
-  padding-top: 1.875rem;
-}
-label {
-  opacity: 1;
-  display: block;
-  position: absolute;
-  top: 6px;
-  top: 0.375rem;
-  left: 16px;
-  left: 1rem;
-  color: #676767;
-  font-weight: 600;
-  -webkit-transition-duration: 0.2s;
-          transition-duration: 0.2s;
-  -webkit-transition-timing-function: ease-in-out;
-          transition-timing-function: ease-in-out;
-  -webkit-transition-property: top, opacity, color;
-          transition-property: top, opacity, color;
-}
-.js-hide-label label {
-  opacity: 0;
-  top: 10px;
-  top: 0.625rem;
-}
-.js-highlight-label label {
-  color: #66a9dc;
-}
-.form-control {
-  display: block;
-  margin: 0;
-  border: 0;
-  background: white;
-  width: 100%;
-  padding: 5px;
-  padding: 0.3125rem;
-  -webkit-box-shadow: inset 0 0 3px 0 #676767;
-          box-shadow: inset 0 0 3px 0 #676767;
-  border-radius: 5px;
-  border-radius: 0.3125rem;
-}
-textarea {
-  max-width: 100%;
-  min-width: 100%;
-}
+html,body{font-size:16px}@-ms-viewport{width:device-width}@viewport{width:device-width}html,body{margin:0;padding:0;color:#111;font-family:"Helvetica Neue",Helvetica,sans-serif;background-color:#f5f5f5}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.container{width:100%;margin-left:auto;margin-right:auto;padding-left:.9375rem;padding-right:.9375rem}@media (min-width:768px){.container{width:46.125rem}}@media (min-width:992px){.container{width:60.125rem}}@media (min-width:1200px){.container{width:73.125rem}}.row{margin-left:-.9375rem;margin-right:-.9375rem}.row::after,.row::before{display:table;content:' '}.row::after{clear:both}.main-content{float:left;width:100%;padding-left:.9375rem;padding-right:.9375rem}@media (min-width:992px){.main-content{width:75%}}.sidebar{float:left;width:100%;padding-left:.9375rem;padding-right:.9375rem}@media (min-width:992px){.sidebar{width:25%}}h1{font-size:2rem}h2{font-size:1.5rem}h3{font-size:1.125rem}h4{font-size:1rem}h5{font-size:.8125rem}h6{font-size:.625rem}h1,h2,h3,h4,h5,h6{font-weight:600}p{font-weight:200}p,label{font-size:1rem;line-height:1.625rem}input{font-weight:200}input,textarea,select,ul,ol{font-size:1rem;line-height:1.625rem}select,ul,ol{font-weight:200}strong{font-weight:600}a{color:#66a9dc;text-decoration:none;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out}a:hover{color:#2e85c8}code{background:#111;color:#f5f5f5;font-family:"Menlo","Courier New",monospace;display:block;overflow:scroll;border-radius:.3125rem;padding:1rem}blockquote{color:#676767;border-left-color:#66a9dc;border-left-style:solid;border-left-width:.5rem;margin-left:0;padding-left:1rem}ul,ol{padding-left:1.25rem}form{margin-left:-.9375rem;margin-right:-.9375rem}form::after,form::before{display:table;display:table;content:' '}form::after{clear:both}.form-group{float:left;width:100%;padding-left:.9375rem;padding-right:.9375rem;position:relative;padding-top:1.875rem}label{opacity:1;display:block;position:absolute;top:.375rem;left:1rem;color:#676767;font-weight:600;-webkit-transition-duration:.2s;transition-duration:.2s;-webkit-transition-timing-function:ease-in-out;transition-timing-function:ease-in-out;-webkit-transition-property:top,opacity,color;transition-property:top,opacity,color}.js-hide-label label{opacity:0;top:.625rem}.js-highlight-label label{color:#66a9dc}.form-control{display:block;margin:0;border:0;background:#fff;width:100%;padding:.3125rem;-webkit-box-shadow:inset 0 0 3px 0 #676767;box-shadow:inset 0 0 3px 0 #676767;border-radius:.3125rem}textarea{max-width:100%;min-width:100%;font-family:"Helvetica Neue",Helvetica,sans-serif;font-weight:400}
