minor tweaks to theme to improve readability

--- a/docs/styleguide/css/main.less
+++ b/docs/styleguide/css/main.less
@@ -69,7 +69,7 @@ code {
   color: @white;
   font-family: @monospace;
   display: block;
-  overflow: scroll;
+  overflow-x: auto;
   border-radius: 5px;
   padding: 16px;
 }
