added button styles

--- a/docs/styleguide/css/inc/_mixins.less
+++ b/docs/styleguide/css/inc/_mixins.less
@@ -39,7 +39,7 @@
 
   .row() {
     .clearfix();
-    margin: 0 unit(-@halfGutterWidth, px);
+    margin: unit(@halfGutterWidth, px) unit(-@halfGutterWidth, px) 0;
   }
 
   .col() {
