--- a/docs/styleguide/css/inc/_vars.less
+++ b/docs/styleguide/css/inc/_vars.less
@@ -1,10 +1,12 @@
 // Colors
 @gray:  #676767;
-@light-gray: #dddddd;
+@lightGray: #dddddd;
 @black: #111111;
 @white: #fafafa;
 @blue:  #66a9dc;
 @red:   #ff4444;
+@yellow: #eef100;
+@green: #00de44;
 
 // Fonts
 @sansSerif: "Helvetica Neue", Helvetica, sans-serif;
