--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -17,6 +17,12 @@ html(lang='en')
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-55365100-1', 'auto');
       ga('send', 'pageview');
-    h1 ksmithut
-    p My site is coming soon! Just working out a build process and such.
+    header.page-header
+      nav.container
+        ul.main-nav
+          li
+            a(href=base) Home
+    main.container
+      h1 ksmithut
+      p My site is coming soon! Just working out a build process and such.
     script(src=jsPath)
