--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -21,7 +21,7 @@ html(lang='en')
       nav.container
         ul.main-nav
           li
-            a(href=base) Home
+            a(href='/') Home
     main.container
       h1 ksmithut
       p My site is coming soon! Just working out a build process and such.
