--- a/src/templates/post.jade
+++ b/src/templates/post.jade
@@ -1,9 +1,28 @@
 doctype html
-html
+html(lang='en')
   head
-    title Posts | Page #{index + 1} | ksmithut
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='description', content=description)
+    title #{title} | ksmithut
     link(rel='stylesheet', href=cssPath)
+    link(rel='author', href='https://plus.google.com/+KeithSmithUT')
+    link(rel='canonical', href=base + path)
   body
-    p Post Template
-    main!= content
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-55365100-1', 'auto');
+      ga('send', 'pageview');
+    header.page-header
+      nav.container
+        ul.main-nav
+          li
+            a(href='/') Home
+    main.container
+      h1= title
+      .content!= content
     script(src=jsPath)
