--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -17,25 +17,39 @@ html(lang='en')
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-55365100-1', 'auto');
       ga('send', 'pageview');
-    header.page-header
-      nav.container
-        ul.main-nav
-          li
-            a(href='/') Home
-          li
-            a(href=collections.content.main.posts.path) Blog
-    main.container
-      h1 ksmithut
-      p My site is coming soon! Just working out a build process and such.
+
+    .navbar.navbar-inverse(role='navigation'): .container
+      .navbar-header
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+          span.sr-only Toggle Navigation
+          each iconBar in [0, 1, 2]
+            span.icon-bar
+        a.navbar-brand(href='/') ksmithut
+      .navbar-collapse.collapse
+        nav: ul.nav.navbar-nav
+          li: a(href=collections.content.main.posts.path) Blog
+
+    .jumbotron
+      .container
+        h1 Hi. I'm Keith.
+        p This is the place where I log my rants, the stuff I learn, and the things I experience.
+
     section.container
       div.sidebar-section
         h3 Most Recent Posts
-        ul
-          - n = 0
-          while n < 3
+        .list-group
+          - n = 0, maxPosts = 5
+          while n < maxPosts
             - post = collections.content.items.posts[n]
             if post
-              li
-                a(href=post.path)= post.title
+              a.list-group-item(href=post.path)
+                h4= post.title
+                p= post.description
             - n++
+
+    .footer.inverse
+      .container
+        - year = new Date().getFullYear()
+        p &copy; Keith Smith #{year}
+
     script(src=jsPath)
