--- a/src/templates/post.jade
+++ b/src/templates/post.jade
@@ -17,12 +17,25 @@ html(lang='en')
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-55365100-1', 'auto');
       ga('send', 'pageview');
-    header.page-header
-      nav.container
-        ul.main-nav
-          li
-            a(href='/') Home
-    main.container
+
+    .navbar.navbar-inverse(role='navigation'): .container
+      .navbar-header
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+          span.sr-only Toggle Navigation
+          each iconBar in [0, 1, 2]
+            span.icon-bar
+        a.navbar-brand(href='/') ksmithut
+      .navbar-collapse.collapse
+        nav: ul.nav.navbar-nav
+          li: a(href=collections.content.main.posts.path) Blog
+
+    section.container
       h1= title
       .content!= content
+
+    .footer.inverse
+      .container
+        - year = new Date().getFullYear()
+        p &copy; Keith Smith #{year}
+
     script(src=jsPath)
