added new blog post for installing node

--- a/src/templates/post.jade
+++ b/src/templates/post.jade
@@ -30,7 +30,8 @@ html(lang='en')
           li: a(href=collections.content.main.posts.path) Blog
 
     section.container
-      h1= title
+      .page-header
+        h1= title
       .content!= content
 
     .footer.inverse
