--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -44,9 +44,9 @@ html(lang='en')
               - post = collections.content.items.posts[n++]
               if post
                 a.list-group-item(href=post.path)
-                  h4= post.title
-                    | &nbsp;
+                  h4
                     span.label.label-default #{post.date.getDate()}/#{post.date.getMonth() + 1}/#{post.date.getFullYear()}
+                    |  #{post.title}
                   p= post.description
         .col-md-6
           h3 Categories
