--- a/src/templates/post.jade
+++ b/src/templates/post.jade
@@ -15,7 +15,8 @@ html(lang='en')
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-55365100-1', 'auto');
+      ga('create', 'UA-55543605-1', 'auto');
+      ga('require', 'displayfeatures');
       ga('send', 'pageview');
 
     .navbar.navbar-inverse(role='navigation'): .container
