modified build process

--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -8,3 +8,9 @@
     <link rel="canonical" href="{{baseUrl}}{{cleanUrl path}}">
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/blog/">Blog</a></li>
+      </ul>
+    </nav>
