got gulp tasks back on track and started writing basic styles

--- a/src/styles/lib/grid.styl
+++ b/src/styles/lib/grid.styl
@@ -1,31 +1,35 @@
 @import 'clearfix'
 @import 'responsive'
 
-grid($breakpoints, $numCols = 12, $gutterWidth = 30)
+//grid($breakpoints, $numCols = 12, $gutterWidth = 30)
 
-  $halfGutter = unit($gutterWidth / 2, 'px')
+$breakpoints = {xs: 0, sm: 768px, md: 992px, lg: 1200px}
+$numCols     = 12
+$gutterWidth = 30
 
-  container($fixedWidth = false)
-    padding 0 $halfGutter
-    box-sizing border-box
-    margin 0 auto
-    if $fixedWidth
-      for $name, $breakpoint in $breakpoints
-        if $breakpoint
-          @media (min-width: $breakpoint)
-            width $breakpoint
+$halfGutter = unit($gutterWidth / 2, 'px')
 
-  row()
-    margin 0 (0 - $halfGutter)
-    clearfix()
+container($fixedWidth = false)
+  padding 0 $halfGutter
+  box-sizing border-box
+  margin 0 auto
+  if $fixedWidth
+    for $name, $breakpoint in $breakpoints
+      if $breakpoint
+        @media (min-width: $breakpoint)
+          width $breakpoint
 
-  // col({sm: 12, md: 4})
-  col($colDef)
-    position relative
-    min-height 1px
-    padding-right 15px
-    padding-left 15px
-    for $name, $cols in $colDef
-      +minWidth($breakpoints[$name])
-        float left
-        width unit($cols / $numCols * 100, '%')
+row()
+  margin 0 (0 - $halfGutter)
+  clearfix()
+
+// col({sm: 12, md: 4})
+col($colDef)
+  position relative
+  min-height 1px
+  padding-right 15px
+  padding-left 15px
+  for $name, $cols in $colDef
+    +minWidth($breakpoints[$name])
+      float left
+      width unit($cols / $numCols * 100, '%')
