--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -1,1 +1,7 @@
-grid($breakpoints, $cols, $gutter)
+*
+  box-sizing border-box
+
+.page-header
+  container()
+  padding-top $halfGutter
+  padding-bottom $halfGutter
