--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,10 +1,12 @@
+@import 'vars'
 // helpers
 @import 'lib/grid'
 @import 'clearfix'
 @import 'responsive'
 // main
-@import 'vars'
 @import 'layout'
 @import 'helper-classes'
 @import 'text'
+@import 'animations'
+@import 'base'
 @import 'header'
