--- a/src/styles/vars.styl
+++ b/src/styles/vars.styl
@@ -1,5 +1,10 @@
 // Colors
-
+$black = #111
+$white = #eee
+$gray  = #676868
+$blue  = #67a8dc
 
 // Layout
-
+$breakpoints = {xs: 0, sm: 768px, md: 992px, lg: 1200px}
+$numCols     = 12
+$gutterWidth = 30
