updated layout and responsiveness

--- a/src/templates/inc/layout.jade
+++ b/src/templates/inc/layout.jade
@@ -21,7 +21,7 @@ html(lang='en')
         a.nav-item(href='/') Home
         a.nav-item(href='/posts') Blog
     //- Main block
-    main: block content
+    main.page-content: block content
     //- Footer
     footer.page-footer
     //- Include scripts
