--- a/src/styles/header.styl
+++ b/src/styles/header.styl
@@ -6,21 +6,35 @@
 
 .logo
   display inline-block
-  width 50px
-  height 50px
+  width 25px
+  height 25px
+  img
+    width 100%
+    height auto
 
 .main-nav
-  font-size 22px
+  font-size 18px
   text-align center
   float right
-  height 50px
+  height 25px
 
 .nav-item
   text-decoration none
-  padding 0 30px
-  line-height 50px
+  padding 0 15px
+  line-height 25px
   height 100%
   display inline-block
   color $white
   &:hover
     color darken($white, 10%)
+
++minWidth($breakpoints['sm'])
+  .logo
+    width 50px
+    height 50px
+  .main-nav
+    height 50px
+    font-size 22px
+  .nav-item
+    line-height 50px
+    padding 0 30px
