added projects and additional blog post

--- a/src/templates/inc/layout.jade
+++ b/src/templates/inc/layout.jade
@@ -19,6 +19,7 @@ html(lang='en')
       a.logo(href='/'): img(src='/images/logos/ksmithut-logo.svg', alt='ksmithut Logo')
       nav.main-nav
         a.nav-item(href='/') Home
+        a.nav-item(href='/projects') Projects
         a.nav-item(href='/posts') Blog
     //- Main block
     main.page-content: block content
