updated stylings and added raspberry pi blog post

--- a/src/styles/text.styl
+++ b/src/styles/text.styl
@@ -1,5 +1,17 @@
 h1, h2, h3, h4, h5, h6
-  font-family 'Ubuntu', Helvetica, sans-serif
+  font-family 'Helvetica Neue', Helvetica, sans-serif
 
 body
-  font-family 'Rokkitt', Helvetica
+  color $black
+  font-family Helvetica, sans-serif
+
+code
+  color $white
+  background-color $black
+  padding 1px 5px
+  border-radius 3px
+
+pre code
+  display block
+  overflow auto
+  padding 15px 5px
