--- a/src/styles/text.styl
+++ b/src/styles/text.styl
@@ -15,3 +15,10 @@ pre code
   display block
   overflow auto
   padding 15px 5px
+
+.lead
+  font-size 22px
+  font-weight 200
+
+.styled
+  font-weight 400
