--- a/src/templates/inc/layout.jade
+++ b/src/templates/inc/layout.jade
@@ -23,7 +23,10 @@ html(lang='en')
     //- Main block
     main.page-content: block content
     //- Footer
-    footer.page-footer
+    footer.page-footer.cf
+      p.copyright &copy; Keith Smith 2014
+      ul.footer-links
+        li: a(href='https://github.com/ksmithut') GitHub
     //- Include scripts
     script(src=jsFile, async)
   
