removed blank section

--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -19,9 +19,9 @@ block content
           | fix them with computers. Professionally, architecting Internet
           | applications is what I focus on, but I tinker around in a lot of
           | software development areas.
-        h2 How I Do It
-        hr
-        p
+        //- h2 How I Do It
+        //- hr
+        //- p
       .col-6
         h2 Recent Posts
         hr
