fixed footer thing

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -1,5 +1,15 @@
-body
+html, body
   background $white
+  min-height 100%
+
+html
+  position relative
+
+body
+  height 100%
+
+body
+  padding-bottom 75px
 
 a
   color $blue
@@ -10,3 +20,7 @@ a
 hr
   border 0
   border-top 1px solid $black
+
+ul, ol
+  clearfix()
+  margin-bottom 0
