added blog post

--- a/src/styles/text.styl
+++ b/src/styles/text.styl
@@ -24,3 +24,8 @@ pre code
 
 .styled
   font-weight 400
+
+blockquote
+  border-left 8px solid $blue
+  padding 1px 15px
+  background lighten($gray, 45)
