--- a/src/templates/post.jade
+++ b/src/templates/post.jade
@@ -1,6 +1,7 @@
 extends ./inc/layout.jade
 
 block content
-  h1= title
-  h4.date= date.toDateString()
-  article!= contents
+  .post-page
+    h1= title
+    h4.date= date.toDateString()
+    article!= contents
