added new post for february

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,8 +1,8 @@
 @import 'vars'
 // helpers
 @import 'lib/grid'
-@import 'clearfix'
-@import 'responsive'
+@import 'lib/clearfix'
+@import 'lib/responsive'
 // main
 @import 'layout'
 @import 'helper-classes'
