--- a/src/styles/lists.styl
+++ b/src/styles/lists.styl
@@ -21,3 +21,15 @@
   display inline-block
   padding 6px 10px
   border-radius 10px
+
+.pagination
+  list-style none
+  .prev, .next
+    float left
+    margin 0 10px
+  .prev
+    a::before
+      content '< '
+  .next
+    a::after
+      content ' >'
